--- a/css/home.css
+++ b/css/home.css
@@ -103,18 +103,59 @@
 
 .status {
     display: flex;
-    flex-flow: row;
+    flex-flow: column;
     flex-grow: 1;
 }
 
 .status-header {
     width: 100%;
 
+    padding: 0.4em;
+
+    font-size: 0.9em;
+
     color: rgb(0, 0, 0);
+    border-bottom: solid 1px #d4d4d4;
+}
+
+.status-borders {
+    border-left: solid 1px #d4d4d4;
+    border-right: solid 1px #d4d4d4;
 }
 
 #all-tickets {
     display: flex;
     flex-flow: row;
+}
+
+.ticket {
+    width: 100%;
+    margin: 0.5em 0 0 0;
+}
+
+.ticket-title {
+    margin: 0.5em;
+}
+
+.ticket-progress {
+    border-radius: 0.5em;
+    border: solid 1px #d4d4d4;
     flex-grow: 1;
+    height: 1em;
+    margin: 0.5em;
+}
+
+.width50 {
+    background-color: rgb(0, 199, 225);
+    width: 50%;
+
+    border-radius: 0.5em;
+    height: 100%;
+}
+
+.width100 {
+    background-color: rgb(0, 199, 225);
+    border-radius: 0.5em;
+    width: 100%;
+    height: 100%;
 }
